spacing fixed overall - just missing O-D pair spacing and baggage spacing

--- a/src/trip/results/ItineraryResult.css
+++ b/src/trip/results/ItineraryResult.css
@@ -120,6 +120,10 @@
   display: grid;
 }
 
+.itinerary-origin-dest {
+  padding-top: 15px;
+}
+
 .segment-preview-icon-container {
   display: grid;
   align-items: center;
